Bug 437462 - 'Recent files' runner no longer shows secondary action to open the containing folder
Summary: 'Recent files' runner no longer shows secondary action to open the containing...
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: filesearch (other bugs)
Version First Reported In: 5.21.90
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: baloo-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-05-21 13:38 UTC by Kishore Gopalakrishnan
Modified: 2021-06-11 06:41 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kishore Gopalakrishnan 2021-05-21 13:38:31 UTC
SUMMARY
For documents which appear as results in the 'recent documents' runner, there is no 'open containing folder' action after upgrading to Plasma 5.21.90.

STEPS TO REPRODUCE
1. Type any query in krunner that brings up a recent file
2. Hover the mouse over the 'recent file' result

OBSERVED RESULTS
There is no secondary action displayed to open the folder containing the file for results appearing in the 'recent documents' section. On the other hand, if a file is shown as a result in the 'Documents' section, it shows a secondary action to open in a new folder.

EXPECTED RESULTS
Just like in Plasma 5.21.5 and in the 'Documents' section, there should be a secondary action displayed that opens the folder containing the file. This action used to be accessible by either pressing 'shift+enter', or by clicking a little icon that would appear to the right of each result when hovering over it.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.21.90
KDE Frameworks Version: 5.82.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Comment 1 Alexander Lohnau 2021-05-21 14:28:14 UTC
Git commit 9baeb9f51fc7e137abf9d9a8187393398eb81cf9 by Alexander Lohnau.
Committed on 21/05/2021 at 14:27.
Pushed by alex into branch 'master'.

Recent Documents: Fix missing actions for results
FIXED-IN: 5.22

M  +1    -1    runners/recentdocuments/recentdocuments.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/9baeb9f51fc7e137abf9d9a8187393398eb81cf9
Comment 2 Alexander Lohnau 2021-05-21 14:28:36 UTC
Git commit 53740c2b02ac2eed0aa19d578a93a27e9d0f6e6f by Alexander Lohnau.
Committed on 21/05/2021 at 14:28.
Pushed by alex into branch 'cherry-pick-9baeb9f5'.

Recent Documents: Fix missing actions for results
FIXED-IN: 5.22


(cherry picked from commit 9baeb9f51fc7e137abf9d9a8187393398eb81cf9)

M  +1    -1    runners/recentdocuments/recentdocuments.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/53740c2b02ac2eed0aa19d578a93a27e9d0f6e6f
Comment 3 Kishore Gopalakrishnan 2021-06-11 06:29:59 UTC
I can still reproduce this bug with Plasma 5.22 (Arch Linux).

Operating System: Arch Linux
KDE Plasma Version: 5.22.0
KDE Frameworks Version: 5.82.0
Qt Version: 5.15.2
Comment 4 Alexander Lohnau 2021-06-11 06:40:08 UTC
Git commit 23577747e93fbb1dfb91d213c78d1f45823de487 by Alexander Lohnau.
Committed on 11/06/2021 at 06:40.
Pushed by alex into branch 'Plasma/5.22'.

Recent Documents: Fix missing actions for results
FIXED-IN: 5.22


(cherry picked from commit 9baeb9f51fc7e137abf9d9a8187393398eb81cf9)

M  +1    -1    runners/recentdocuments/recentdocuments.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/23577747e93fbb1dfb91d213c78d1f45823de487
Comment 5 Alexander Lohnau 2021-06-11 06:41:25 UTC
Sorry, gitlab created a new branch by default instead of cherry-picking to the selected branch. Done now :)