Recent Documents: Fix missing actions for results

BUG: 437462
FIXED-IN: 5.22


(cherry picked from commit 9baeb9f51fc7e137abf9d9a8187393398eb81cf9)